# malcentasko

./: .gitignore
malcentasko-contracts/: Cargo.toml
malcentasko-contracts/src/: instruction.rs  lib.rs  processor.rs
server/: Cargo.toml  diesel.toml
server/migrations/2022-04-30-220924_create_user_db/: down.sql  up.sql
server/migrations/2022-05-01-190253_create_tasks_table/: down.sql  up.sql
server/migrations/2022-05-07-213514_add_time_and_is_done_field/: down.sql  up.sql
server/migrations/2022-05-14-180522_add_type_status_field/: down.sql  up.sql
server/migrations/2022-05-30-103832_tasks_rename_owner_id_to_user_id/: down.sql  up.sql
server/src/: config.rs  errors.rs  macros.rs  main.rs  schema.rs
server/src/handlers/: mod.rs  task_handlers.rs  user_handlers.rs
server/src/models/: mod.rs  task.rs  types.rs  user.rs
server/src/services/: task_service.rs  user_service.rs
