[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "r2d2"]}
serde = { version = "1.0.136", features = ["derive"]}
serde_derive = "1.0.136"
r2d2 = "0.8.9"
serde_json = "1.0.79"
diesel_migrations = "1.4.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
dotenv = "0.15.0"
bcrypt = "0.12.1"
jsonwebtoken = "8.0.1"
chrono = "0.4.18"
diesel-derive-enum = { version = "1", features = ["postgres"] }